WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212079
[GTK] Drag-and-drop does not work under flatpak
https://bugs.webkit.org/show_bug.cgi?id=212079
Summary
[GTK] Drag-and-drop does not work under flatpak
Michael Catanzaro
Reported
2020-05-19 09:00:28 PDT
Drag-and-drop does not work under flatpak, we need to add support for the FileTransfer portal:
https://flatpak.github.io/xdg-desktop-portal/portal-docs.html#gdbus-org.freedesktop.portal.FileTransfer
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2021-06-30 08:12:38 PDT
Our bubblewrap sandbox seems fine. This is only a problem for flatpak.
Patrick Griffis
Comment 2
2021-06-30 10:43:26 PDT
GTK4 uses the FileTransfer portal I believe. Might at least become easier for us then.
Kdwk
Comment 3
2023-02-24 06:24:25 PST
As of WebKitGTK 2.39.9, Epiphany 44.beta-37-g930d407b4+, this bug can still be observed. The website simply doesn't receive anything and thinks the file is empty.
Kdwk
Comment 4
2023-09-25 01:19:26 PDT
This issue appears to be fixed in Gnome Web 45.0/ WebKitGTK 2.42.0 and also in other WebKitGTK-based apps
Michael Catanzaro
Comment 5
2023-09-25 05:20:05 PDT
It's still broken for me.
Kdwk
Comment 6
2023-09-25 05:53:10 PDT
Whoops. Looks like I reported the wrong version. It should be Epiphany Technology Preview 45.0-9-gfd75062d8+/ WebKitGTK 2.42.0.
Kdwk
Comment 7
2023-09-25 05:55:11 PDT
Ah. Looks like I spoke too soon. That works because I gave it access to filesystem=home when I was debugging something :(
Michael Catanzaro
Comment 8
2023-12-07 09:55:33 PST
Sure looks like drag and drop works fine here in today's Ephy Tech Preview. And it's probably expected, because: (In reply to Patrick Griffis from
comment #2
)
> GTK4 uses the FileTransfer portal I believe. Might at least become easier > for us then.
Kdwk, it sounds like a few months ago you decided that something was still not working correctly. Can you provide more details please? It sounds like the general case, at least, is fixed.
Kdwk
Comment 9
2023-12-07 18:52:36 PST
This still does not work. The file received by the website is 0 bytes unless the Flatpak has filesystem=home or whichever folder the file comes from
Georges Basile Stavracas Neto
Comment 10
2024-03-07 04:43:26 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25575
EWS
Comment 11
2024-03-11 09:12:49 PDT
Committed
275908@main
(ff20e457cb9c): <
https://commits.webkit.org/275908@main
> Reviewed commits have been landed. Closing PR #25575 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug